--- a/index.html
+++ b/index.html
@@ -39,5 +39,23 @@
                 </div>
             </div>
         </section>
+        <section class="container__we__offer">
+            <div class="card">
+                <img src="images/item1.png" alt=""/>
+                <h2>Order Online</h2>
+                <p>Stay home and order to your doorstep</p>
+            </div>
+            <div class="card">
+                <img src="images/item2.png" alt=""/>
+                <h2>Dining</h2>
+                <p>View the city's favourite dining venues</p>
+            </div>
+            <div class="card">
+                <img src="images/item3.png" alt=""/>
+                <h2>Nightlife and Clubs</h2>
+                <p>Explore the city's top nightlife outlets</p>
+            </div>
+        </section>
+        
     </body>
 </html>
