--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </div>
             </div>
         </section>
-        <section class="container__we__offer">
+        <section class="container we__offer">
             <div class="card">
                 <img src="images/item1.png" alt=""/>
                 <h2>Order Online</h2>
@@ -55,6 +55,46 @@
                 <h2>Nightlife and Clubs</h2>
                 <p>Explore the city's top nightlife outlets</p>
             </div>
+        </section>
+        <section class="container collections">
+            <h1>Collections</h1>
+            <div class="sub__heading_container">
+              <span>
+                Explore curated lists of top restaurants, cafes, pubs, and bars in
+                Delhi NCR, based on trends
+              </span>
+              <span>All collections in Delhi NCR</span>
+            </div>
+            <div class="collections_card_container">
+                <div class="card card1">
+                    <div class="overlay"></div>
+                    <div class="content">
+                      <h4>Live Cricket Screening</h4>
+                      <span>58 Place</span>
+                    </div>
+                  </div>
+                <div class="card card2">
+                    <div class="overlay"></div>
+                    <div class="content">
+                      <h4>Ramadan Special</h4>
+                      <span>22 Place</span>
+                    </div>
+                </div>
+                <div class="card card3">
+                    <div class="overlay"></div>
+                    <div class="content">
+                      <h4>Newly Opened</h4>
+                      <span>20 Place</span>
+                    </div>
+                </div>
+                <div class="card card4">
+                    <div class="overlay"></div>
+                    <div class="content">
+                      <h4>Trending This Week</h4>
+                      <span>30 Place</span>
+                    </div>
+                  </div>
+                </div>
         </section>
         
     </body>
